developerProject/force-app/main/default/objects/Application__c/fields/Asset_type__c.field-meta.xml
<CustomField>
    <fullName>Asset_type__c</fullName>
    <label>Asset type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Plant and Equipment</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>LEAP Legal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Telecoms</fullName>
            </value>
            <value>
                <fullName>Vehicles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>