developerProject/force-app/main/default/objects/Application__c/fields/Customer_type__c.field-meta.xml
<CustomField>
    <fullName>Customer_type__c</fullName>
    <label>Customer type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>