developerProject/force-app/main/default/objects/Application__c/fields/No_Of_Payments__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Payments__c</fullName>
    <label>No Of Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>