developerProject/force-app/main/default/objects/Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Under Assessment</fullName>
            </value>
            <value>
                <fullName>Approved-Pending further info</fullName>
            </value>
            <value>
                <fullName>Approved - Waiting on Invoice</fullName>
            </value>
            <value>
                <fullName>In for Settlement</fullName>
            </value>
            <value>
                <fullName>Out for Signing</fullName>
            </value>
            <value>
                <fullName>Signed Documents</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>