developerProject/force-app/main/default/objects/Application__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Line_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Line_Item__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>