developerProject/force-app/main/default/objects/Application__c/fields/Total_Amount_and_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_and_GST__c</fullName>
    <formula>Total_Amount__c  *  (1+ GST__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount and GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>